[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[project]
name = 'cache-manager'
version = "0.0.1"
requires-python = '>=3.8'
dependencies = [
]

[project.optional-dependencies]
dev = [
    "redis==5.2.1",
    "SQLAlchemy==2.0.36",
    "psycopg2==2.9.9",
    "pyflakes==2.3.0",
    "pytest==7.0.0",
    "pytest-flake8==1.0.7",
    "pytest-flakes~=4.0.5",
    "testcontainers[postgres]==3.7.1",
    "testcontainers[redis]"
]

[tool.pyright]
venv = ".venv"
venvPath = "."